Update questionnaire UI + app wiring

--- a/WearWise/questionaire.html
+++ b/WearWise/questionaire.html
@@ -349,7 +349,7 @@
 
     .item-link a {
       font-size: 0.8rem;
-      color: #727200;
+      color: #cc0000;
       text-decoration: none;
     }
 
